# novapanda

./: .env.example  .gitignore  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_SETUP.md  GOVERNANCE.md  README.md  SECURITY.md  VERSIONING.md  extract_doc.py  extracted.txt  pyproject.toml  run_local_gatekeeper.py  run_local_gatekeeper.sh  投资战略-楔子与定位.md  智能世界价值交换-完整汇编(1).md  架构设计.md  行动计划-从0到1.md  设计-协议v0与模拟舱.md  详细设计.md
adapters/: README.md  __init__.py
conformance/: BRAND_PREP_LOG.md  C-MCP.md  CALL_FOR_SECOND_IMPL.md  CERTIFICATION.md  EXTERNAL_PLUGFEST.md  NOVAPANDA_PARALLEL_CHECKLIST.md  PRE_PUBLISH_CHECKLIST.md  SECOND_IMPL_STARTER.md  SYNC_LAUNCH_ALIGNMENT.md  TRADEMARK.md  TRADEMARK_CN_PERSONAL.md  VECTORS.md  adapter_author_checklist.json  gap_audit.py  lite_embedded_checklist.json  run.py  second_impl_checklist.json  suite.py
decisions/: 0000-template.md  0001-vdc-first-not-account-balance.md  0002-settlement-as-adaptor-not-core.md  0003-bundle-orchestration-client-side.md  README.md
demo/: adopter_av_charge.py  adopter_closed_loop.py  adopter_m3_product.py  adopter_m4_rails.py  adopter_mqtt_iot.py  adopter_site_patrol.py  adopter_smoke_all.py  claim_xfer_demo.py  llm_judge_demo.py  mcp_minimal.py  multi_rail_demo.py  nested_diligence.py  plugfest.py  run_demo.py  s1_sandbox_demo.py  stripe_live_sandbox_demo.py  stripe_sandbox_demo.py  trial_remote.py
deploy/: AWS_P2_OPS.md  CHECKLIST.md  MINIMAL_LAUNCH_CN.md  MOCK_STABILITY.md  NEXT_ACTIONS_CN.md  OPERATOR_LEGAL.md  README.md
docs/: CHANGELOG-session-2026-07-19.md  CHARTER.md  CNAME  index.html  (+19 more)
(+439 files in other folders)
