[project]
name = "novapanda"
version = "0.0.1"
description = "NovaPanda — verifiable delivery exchange protocol, reference implementation"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42",
    "jsonschema>=4.21",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "cbor2>=5.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
np = "novapanda.cli:main"

[tool.setuptools.packages.find]
include = ["novapanda*", "adapters*"]

[tool.setuptools.package-data]
"novapanda.node" = ["static/brand/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
